# img4helper

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN  LICENSE  README.md  TESTING  iBoot.d20.RELEASE.im4p  meson.build  notes.txt  print_test.c
include/: .image4.h.swp  asn1.h  extract.h  image4.h  img4.h  img4helper.h  print.h  version.h
src/: .main.c.swp  CMakeLists.txt  asn1.c  asn1.h  config.h  darwin.c  darwin.h  devtree.c  devtree.h  extract.c  image4.c  img4.c  img4.h  lzss.c  lzss.h  main.c  meson.build  print.c  version.h
test/: apticket.im4m  apticket.shsh2  iBEC.d11.RELEASE.im4p  iBoot.decrypted.im4p  iBoot.img4  iBoot.test.img4  iBoot.testing.im4p  ibec.release.im4p.patched  test.im4m  ticket.shsh2  ticket.txt
test/crypto/: main.c
